--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -1,6 +1,6 @@
 /*
-    FIREAC (https://github.com/AmirrezaJaberi/FIREAC)
-    Copyright 2022-2024 by Amirreza Jaberi (https://github.com/AmirrezaJaberi)
+    FIREAC HIGHCLASS
+    Copyright 2022-2024 by M Tri Hamdani (https://github.com/Dailylepedia-Grup)
     Licensed under the GNU Affero General Public License v3.0
 
 
